@@ -694,73 +694,6 @@ namespace OpenBabel {
   ///@{
   OBAPI std::vector<StereogenicUnit> FindStereogenicUnits(OBMol *mol, 
       const std::vector<unsigned int> &symClasses);
-  /**
-   * Find all tetrahedral centers using the symmetry classes in the 
-   * @p symClasses map.
-   *
-   * There are several criteria for tetrahedral centers:
-   * - Cannot be Nitrogen, Phosphorus or Sulfur
-   * - Must be a sp3 atom (i.e. OBAtom::GetHyb() == 3)
-   * - Must have at least 3 heavy neighbor atoms
-   *
-   * @c True-stereocenters are identified first. These have atoms 
-   * with 4 different symmetry classes attached. When there are only 3 neighbor 
-   * atoms, it will suffice that their symmetry classes are different. Since we 
-   * already checked that there should be at least 3 heavy atom neighbors, we 
-   * can conclude the 4th missing atom is an implicit hydrogen 
-   * (OBStereo::ImplicitRef).
-   *
-   * The term @c para-stereocenters (para = ressemble) is used to denote
-   * stereocenters, which altough not true-stereocenters (i.e. have 4 different
-   * symmetry classes for neighbours), are still stereogenic.[1] 
-   * 
-   *
-     @verbatim
-     Reference:
-     [1] M. Razinger, K. Balasubramanian, M. Perdih, M. E. Munk,
-     Stereoisomere Generation in Computer-Enhanced Structure Elucidation,
-     J. Chem. Inf. Comput. Si. 1993, 33, 812-825
-     http://www.mcs.csueastbay.edu/~kbalasub/reprints/282.pdf
-     @endverbatim
-    *
-   * @param mol The molecule.
-   * @param symClasses The current symmetry classes (OBGraphSym)
-   *
-   * @return A vector with a pairs consisting of the unique atom id for each 
-   * tetrahedral center. The second bool field in the std::pair is to mark if
-   * the stereo center is a true-stereocenter (true) or a para-stereocenter 
-   * (false).
-   */
-  OBAPI std::vector<unsigned long> FindTetrahedralAtoms(OBMol *mol, 
-      const std::vector<unsigned int> &symClasses);
-  /**
-   * Find all cis/trans bonds using the symmetry classes in the 
-   * @p symClasses map.
-   *
-   * There are several criteria for cis/trans bonds:
-   * - Must be a double bond (i.e. OBBond::GetBO() == 2)
-   * - Cannot be in a ring
-   * - The double bond begin and end atom should also have a single bond 
-   *   (i.e. OBAtom::HasSingleBond())
-   *
-   * Next, the double bond begin and end atom are separately checked using 
-   * the same logic:
-   * - If the atom's valence is 2, we only need to check if the atom 
-   *   connected by the single bond is not a hydrogen since we will 
-   *   assume the 3th missing atom is an implicit hydrogen.
-   * - If there are 3 neighbors, the 2 symmetry classes for the atoms 
-   *   connected by a single bond, cannot be the same.
-   *
-   * The logic above can be simplified: Make sure the begin and end atom 
-   * are not connected to 2 atoms with the same symmetry class.
-   *
-   * @param mol The molecule.
-   * @param symClasses The current symmetry classes (OBGraphSym)
-   *
-   * @return The bond ids for all cis/trans bonds.
-   */
-  OBAPI std::vector<unsigned long> FindCisTransBonds(OBMol *mol, 
-      const std::vector<unsigned int> &symClasses);
   ///@}
  
   /**
